[project]
name = "ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain-community>=0.4",
    "langchain-core>=0.3.79",
    "langchain-openai>=0.3.35",
    "langgraph>=1.0.0",
    "python-dotenv>=1.1.1",
]
